# fastapi-template

./: README.md  alembic.ini  pyproject.toml
alembic/: README  env.py
alembic/versions/: dfa74266eef3_first_commit.py  ea3c6df4e9fa_modified_table_resource1.py  ffe93efeb770_add_taxes_table.py
app/: config.py  main.py
app/api/: base.py
app/api/resources/resource1/: models.py  operations.py  routes.py  schemas.py
app/api/ressources/taxes/: models.py  operations.py  routes.py  schemas.py
app/database/: base.py
